2nd commit of Tickets project
Signed-off-by: kirtananushka <kir.tananushka@gmail.com>

--- a/src/main/resources/bundle/pagecontent_ru_RU.properties
+++ b/src/main/resources/bundle/pagecontent_ru_RU.properties
@@ -100,5 +100,13 @@ cinema.edit=Редактировать кинотеатр
 form.next=Продолжить
 genre.edit=Редактировать жанр
 genre.edit.text=Выберите жанр для редактирования:
+clients=Клиенты
+clients.active=Активные клиенты
+client.id=ID
+registration.date=Дата регистрации
+verified=Верифицирован
+active=Активный
+email.email=Email
+registration.date.short=Регистрация
 
 
