3d commit of Tickets project
Signed-off-by: kirtananushka <kir.tananushka@gmail.com>

--- a/src/main/resources/bundle/pagecontent_ru_RU.properties
+++ b/src/main/resources/bundle/pagecontent_ru_RU.properties
@@ -108,5 +108,12 @@ verified=Верифицирован
 active=Активный
 email.email=Email
 registration.date.short=Регистрация
+user.role=Роль
+clients.all=Все клиенты
+manager.id=ID
+managers=Менеджеры
+managers.active=Активные менеджеры
+managers.all=Все менеджеры
+shows.cinemas=Кинотеатры
 
 
