4th commit of Tickets project
Signed-off-by: kirtananushka <kir.tananushka@gmail.com>

--- a/src/main/resources/bundle/pagecontent_ru_RU.properties
+++ b/src/main/resources/bundle/pagecontent_ru_RU.properties
@@ -29,7 +29,7 @@ form.button.check=Проверить
 form.button.reset=Сброс
 form.login.exists=Логин уже существует!
 registration.text=Для подтверждения вашего аккаунта просмотрите папку входящих сообщений на почте, которую вы использовали при регистрации на нашем сайте. Электронное письмо для подтверждения аккаунта содержит ссылку для подтверждения адреса электронной почты. Пройдите по ссылке, чтобы подтвердить регистрацию вашего аккаунта.
-registration.success=Регистрация прошла успешно.
+registration.success=Регистрация прошла успешно
 confirmation.text=Аккаунт успешно подтвержден.
 access.denied.title=Доступ запрещен!
 access.denied.text=У вас нет прав для просмотра этой страницы.
@@ -115,5 +115,9 @@ managers=Менеджеры
 managers.active=Активные менеджеры
 managers.all=Все менеджеры
 shows.cinemas=Кинотеатры
+user.id=ID
+users.all=Все пользователи
+users=Юзеры
+appoint.manager=Назначить менеджером
 
 
