5th commit of Tickets project
Signed-off-by: kirtananushka <kir.tananushka@gmail.com>

--- a/src/main/resources/bundle/err_ru_RU.properties
+++ b/src/main/resources/bundle/err_ru_RU.properties
@@ -40,3 +40,4 @@ cinema.updating.failed=Не удалось отредактировать кин
 genre.updating.failed=Не удалось отредактировать жанр
 invalid.role=Недопустимая роль
 appointment.failed=Не удалось назначить менеджера
+incorrect.data=Неверные данные!
