--- a/src/main/resources/bundle/pagecontent_ru_RU.properties
+++ b/src/main/resources/bundle/pagecontent_ru_RU.properties
@@ -119,5 +119,10 @@ user.id=ID
 users.all=Все пользователи
 users=Юзеры
 appoint.manager=Назначить менеджером
+password.changed.text=Новый пароль был отправлен на электронную почту, которую вы указали при регистрации. Вы сможете изменить пароль в личном кабинете.
+password.changed.title=Пароль был изменен
+access.restoration.text=Введите логин и электронную почту,<br>указаныe при регистрации
+access.restoration=Восстановление доступа к сайту
+forgot.password=Я забыл(а) пароль
 
 
