--- a/src/main/resources/email/email_ru.properties
+++ b/src/main/resources/email/email_ru.properties
@@ -17,3 +17,5 @@ mail.message.subject=Новое сообщение
 mail.msg.text1=%s %s отправил новое сообщение.<br>
 mail.msg.text2=Email: %s.<br>Телефон: %s.<br>
 mail.msg.text3=Текст сообщения:<br>%s
+mail.newpassword.subject=Новый пароль
+mail.newpassword.text=Здравствуйте,
